--- a/1Lab/index.html
+++ b/1Lab/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="ru" >
-
 <head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -14,7 +13,6 @@
 <script src="script.js"></script>
 
 </head>
-
 <body>
 
 <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
@@ -22,75 +20,37 @@
         <div class="navbar-header">
           <a class="navbar-brand" href="#">Instagram на Яндекс.Карте</a>
         </div>
-       <!-- <div class="collapse navbar-collapse">
-        	<div class="col-lg-3">
-          <div class="input-group custom-search-form">
-              <input type="text" class="form-control" name="search_address">
-              <span class="input-group-btn">
-              <button id="searchmap" class="btn btn-default" type="button">
-              <span class="glyphicon glyphicon-search"></span>
-             </button>
-             </span>
-             </div> /input-group
-        </div>
-        </div>
-        </div><!--/.nav-collapse --> -->
       </div>
+</div>
 
-
-    </div>
-
-    <div class="container">
-
-      <div class="row">
+<div class="container">
+    <div class="row">
         <div class="col-xs-6">
-        	<div id="map" style="width: 100%; height: 700px;"></div>
+        	 <div id="map" style="width: 100%; height: 700px;"></div>
         </div>
         <div class="col-xs-6">
-        <div id="add_img" class="row2">
+          <div id="add_img" class="row2"></div>
         </div>
-
-        </div>
-      </div>
-
     </div>
+</div>
 
-    <div class="container2">
+<div class="container2">
       <div class="navbar-header">
         <a class="navbar-brand" href="#">Поиск по тегу</a>
       </div>
       <div class="collapse navbar-collapse">
         <div class="col-lg-3">
-        <div class="input-group custom-search-form">
+          <div class="input-group custom-search-form">
             <input type="text" class="form-control" name="search_hash">
             <span class="input-group-btn">
             <button id="hashsearch" class="btn btn-default" type="button">
             <span class="glyphicon glyphicon-search"></span>
-           </button>
-           </span>
+            </button>
+            </span>
            </div>
-      </div>
-      </div>
-      </div>
-
-    <!--  <div class="container2">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="#">Поиск по тегу</a>
         </div>
-        <div class="collapse navbar-collapse">
-          <div class="col-lg-3">
-          <div class="input-group custom-search-form">
-              <input type="text" class="form-control" name="search_hash">
-              <span class="input-group-btn">
-              <button id="hashsearch" class="btn btn-default" type="button">
-              <span class="glyphicon glyphicon-search"></span>
-             </button>
-             </span>
-             </div>
-        </div>
-        </div>
-      </div> -->
-
+      </div>
+</div>
 
 </body>
 </html>
