--- a/1Lab/1.html
+++ b/1Lab/1.html
@@ -28,3 +28,12 @@
 
 </body>
 </html>
+
+<!--
+screen.width. Определяет ширину экрана (монитора).
+screen.height. Определяет высоту экрана (монитора).
+document.body.clientWidth. Определяет ширину браузера.
+document.body.clientHeight. Определяет высоту браузера.
+$(window).width(). Определяет ширину браузера, но только при наличии jQuery.
+$(window).height(). Определяет высоту браузера, но только при наличии jQuery
+-->
