--- a/1Lab/index.html
+++ b/1Lab/index.html
@@ -8,6 +8,9 @@
 <script src="http://yandex.st/jquery/1.8.0/jquery.min.js"></script>
 <script src="http://yandex.st/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 <script src="http://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
+<script type="text/javascript" src="jquery-2.1.4.min.js"></script>
+<script type="text/javascript" src="jquery.validate.min.js"></script>
+<script src="glm-ajax.js"></script>
 <link href="style.css" rel="stylesheet">
 <script src="script.js"></script>
 
